formatted picture and header

--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="src/index.css">
   </head>
   <body>
+    <div id="complete-container">
+      <nav id="nav-bar">test</nav>
+      <div id="header">
+        <div id='description'></div>
+      </div>
+    </div>
+
     <script src="src/index.js" charset="utf-8"></script>
   </body>
 </html>
